# PVC-Tensile-Experiment

./: .gitignore  Book1 Processed.csv  Book1.xlsx  Data Viewer and Combiner.ipynb  Data Viewer.ipynb  Elastic and Hyperelastic fitting.ipynb  Elastic, Hyperelastic, and Viscoelastic fitting.ipynb  Functions.py  Hyperelastic Nonlinear Curve Fit.mlx  Misc Processing.ipynb  PVC P2 Test_0.csv  PVC P2 Test_1.csv  PVC P2 Test_4.csv  Particle Tracking.ipynb  Pixel Calibration.npy  README.md  Strain Processing.ipynb  Time.csv  Viscoelastic Model Diagram.py  Viscoelastic fitting.ipynb  WidthChecker.py  pyproject.toml  stress.csv
src/pvc_tensile_experiment/: Cos Correction.py  Functions.py  __init__.py
